--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
     // # Rust Analyzer
-    // If you need to work on js_wasm,
-    // you can temporarily change this to js_wasm:
-    "rust-analyzer.cargo.features": ["js_v8"],
+    // If you need to work on js_wasm, uncomment the next line
+    "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
 
     // # Formatting
     "editor.formatOnSave": true,
