--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Robin Ricard <git@rricard.me>"]
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 rusty_v8 = "0.9.1"
 
