--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -1,9 +1,9 @@
 name: cargo build & test
 on:
     push:
-        branches: [master]
+        branches: [default]
     pull_request:
-        branches: [master]
+        branches: [default]
 jobs:
     build:
         runs-on: ubuntu-latest
