--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,15 @@ keywords = [ "scripting", "javascript", "wasm", "v8" ]
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[dependencies]
+serde = "1.0"
+serde_json = "1.0"
+
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 rusty_v8 = "0.9.1"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen = "0.2.67"
+wasm-bindgen = { version = "0.2.67", features = ["serde-serialize"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.17"
